[tool.poetry]
name = "particle-method"
version = "0.1.0"
description = ""
authors = ["Tatsuro KIshi <kishi@wni.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ipython = "^8.0.1"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
